--- a/archives.html
+++ b/archives.html
@@ -19,6 +19,10 @@
 <h1>Archives for My Cool Site</h1>
 
 <dl>
+    <dt>Fri 10 February 2023</dt>
+    <dd><a href="https://tpan49.github.io/my-third-article.html">My Third Article</a></dd>
+    <dt>Thu 09 February 2023</dt>
+    <dd><a href="https://tpan49.github.io/my-second-article.html">My Second Article</a></dd>
     <dt>Wed 08 February 2023</dt>
     <dd><a href="https://tpan49.github.io/my-first-article.html">My First Article</a></dd>
 </dl>
